add more views to CBL form and restore red design boxes

--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -13,6 +13,25 @@
         </h1>
 
         <p>5 years of address<strong class="govuk-tag red">coming soon</strong></p>
+
+        <p>Address 1 - questions asked are:</p>
+        <ul class="govuk-list govuk-list--bullet">
+      <li>Address</li><br>
+      <li><strong>Type of residence</strong></li>
+      <li>Tennant</li>
+      <li>Lodger</li>
+      <li>Owner</li>
+      <li>Date moved in</li>
+      <li>Date moved out</li><br>
+      <li><strong>Reason for leaving</strong></li>
+      <li>Eviction: rent arrears</li>
+      <li>Eviction: other reason</li>
+      <li>Asked or told to leave</li>
+      <li>Marriage breakdown</li>
+      <li>End of lease</li>
+      <li>House sale</li>
+      <li>Other</li>
+    </ul>
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
@@ -23,8 +42,11 @@
     </div>
 </div>
 
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>not ready - just for illustration of what we ask for each</li>
+    </ul>
 </div>
 
 {% endblock %}
