--- a/app/views/forms/housing/CBLadd-children.html
+++ b/app/views/forms/housing/CBLadd-children.html
@@ -383,7 +383,7 @@
       }) }}
 
 
-      <div class="UR-notes-box">
+      <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
          <p>Wording would probably change - need to be seen by Sharon and approved by Housing</p>
       </div>
