--- a/app/views/forms/housing/CBLadd-person-alt.html
+++ b/app/views/forms/housing/CBLadd-person-alt.html
@@ -833,9 +833,10 @@
 
     </div>
 </div>
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
    <p>We can then ask about pregnancy, and joint applicant after.</p>
+   <p><strong>I'll try a different way of enter this data - not ready yet</strong></p>
 </div>
 
 {% endblock %}
