--- a/app/views/forms/housing/CBLbabies.html
+++ b/app/views/forms/housing/CBLbabies.html
@@ -60,7 +60,7 @@
 
     </div>
 </div>
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
    <p>The wording would need to be approved and maybe changed by Sharon / Housing</p>
 </div>
