--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -111,7 +111,7 @@
     </div>
 </div>
 
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
    <p>Not sure we need the textbox at the bottom, this is in case they have different sleeping arrangements</p> 
    <p>This is grouping 4 previous screens:</p>
