--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -38,8 +38,9 @@
     </div>
 </div>
 
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
+    <p>not finished: need a checkbox, the link to the privacy policy, and the content will have to be reviewed - this is too much for now </p>
 </div>
 
 {% endblock %}
