--- a/app/views/forms/housing/CBLmonitor.html
+++ b/app/views/forms/housing/CBLmonitor.html
@@ -32,9 +32,9 @@
     </div>
 </div>
 
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>this content was not seen by Sharon</p>
+    <p>this content was not seen by Sharon - there is too much - people won't read it especially considering how long this form takes</p>
 </div>
 
 {% endblock %}
