--- a/app/views/forms/housing/CBLreasons.html
+++ b/app/views/forms/housing/CBLreasons.html
@@ -12,7 +12,170 @@
             Apply online for Housing
         </h1>
 
-        <p>Reasons for applying <strong class="govuk-tag red">coming soon</strong></p>
+        <div class="govuk-form-group">
+            <fieldset class="govuk-fieldset" aria-describedby="diff-hint">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h1 class="govuk-fieldset__heading">
+                    Why are you applying for housing?
+                </h1>
+                </legend>
+                <span id="diff-hint" class="govuk-hint govuk-!-margin-bottom-8">
+                Select all that apply.
+                </span>
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h2 class="govuk-fieldset__heading">
+                        Need to leave my current home
+                    </h2>
+                    </legend>
+                <div class="govuk-checkboxes">
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="leave-1" name="leave" type="checkbox" value="leave1">
+                        <label class="govuk-label govuk-checkboxes__label" for="leave-1">
+                        Homeless or threatened with homelessness
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="leave-2" name="leave" type="checkbox" value="leave2">
+                        <label class="govuk-label govuk-checkboxes__label" for="leave-2">
+                        Leaving prison
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="leave-3" name="leave" type="checkbox" value="leave3">
+                        <label class="govuk-label govuk-checkboxes__label" for="leave-3">
+                        Leaving hospital
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="leave-4" name="leave" type="checkbox" value="leave4">
+                        <label class="govuk-label govuk-checkboxes__label" for="leave-4">
+                        Leaving HM Armed Forces
+                        </label>
+                    </div>
+             
+
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                        Personal difficulties
+                    </h2>
+                    </legend>
+          
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-1" name="diff" type="checkbox" value="relation">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-1">
+                                Relationship problems
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-2" name="diff" type="checkbox" value="abuse">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-2">
+                                Domestic abuse
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-3" name="diff" type="checkbox" value="violence">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-3">
+                                Harassment or violence in my area
+                        </label>
+                    </div>
+              
+
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                            Financial difficulties
+                    </h2>
+                </legend>
+           
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-4" name="diff" type="checkbox" value="mortage">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-4">
+                                Home being repossessed as can’t pay mortgage
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-5" name="diff" type="checkbox" value="rent">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-5">
+                                Can’t afford to pay rent
+                        </label>
+                    </div>
+               
+
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                    <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                            Home not suitable
+                    </h2>
+                    </legend>
+           
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-1" name="diff" type="checkbox" value="relation">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-1">
+                                Home declared Below Tolerable Standard or has a closing order
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-2" name="diff" type="checkbox" value="abuse">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-2">
+                                Medical condition made worse by my current housing
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-3" name="diff" type="checkbox" value="violence">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-3">
+                                Problems getting around my home due to disability
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-2" name="diff" type="checkbox" value="abuse">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-2">
+                                Home is overcrowded
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-3" name="diff" type="checkbox" value="violence">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-3">
+                                Home is too big for me
+                        </label>
+                    </div>
+                
+
+
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                        <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                                Personal reasons
+                        </h2>
+                    </legend>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-4" name="diff" type="checkbox" value="mortage">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-4">
+                                To be nearer family
+                        </label>
+                    </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="diff-5" name="diff" type="checkbox" value="rent">
+                        <label class="govuk-label govuk-checkboxes__label" for="diff-5">
+                                Social or cultural reasons
+                        </label>
+                    </div>
+                </div>
+
+            </fieldset>
+        </div>
+
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+            <h2 class="govuk-fieldset__heading govuk-!-margin-top-8">
+                    Other
+            </h2>
+            </legend>
+        {% from "textarea/macro.njk" import govukTextarea %}
+
+        {{ govukTextarea({
+          name: "reason-other",
+          id: "reason-other",
+          label: {
+            text: "Give Details"
+          }
+        }) }}
+        
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
@@ -23,8 +186,11 @@
     </div>
 </div>
 
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>this is a very long list, but as a lot of pages are very long ...</li>
+    </ul>
 </div>
 
 {% endblock %}
