--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -15,7 +15,7 @@
       <h2 class="govuk-heading-m">
         About you
       </h2>
-    
+      <form class="form" method="post">
       {% from "input/macro.njk" import govukInput %}
 
       {{ govukInput({
@@ -24,6 +24,7 @@
         },
         id: "first-name-applicant",
         name: "first-name-applicant",
+        value: data['first-name-applicant'],
         classes: "govuk-input--width-20"
       }) }}
 
@@ -33,6 +34,7 @@
         },
         id: "last-name-applicant",
         name: "last-name-applicant",
+        value: data['last-name-applicant'],
         classes: "govuk-input--width-20"
       }) }}
 
@@ -42,6 +44,7 @@
         },
         id: "telephone-number",
         name: "telephone-number",
+        value: data['telephone-number'],
         type: "tel",
         classes: "govuk-input--width-10"
       }) }}
@@ -56,6 +59,7 @@
         },
         id: "email",
         name: "email",
+        value: data['email'],
         type: "email",
         classes: "govuk-input--width-20"
       }) }}
@@ -64,10 +68,9 @@
 
       {{ govukButton({
         text: "Continue",
-        href: "/forms/housing/CBLpostcode.html",
         classes: "button-primary"
       }) }}
-
+      </form>
     </div>
 </div>
 <div class="design-notes-box">
