--- a/app/views/forms/housing/CBLlegal.html
+++ b/app/views/forms/housing/CBLlegal.html
@@ -127,7 +127,7 @@
     </div>
 </div>
 
-<div class="UR-notes-box">
+<div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
    <p>As the form is long I'm trying to see if these could be grouped</p>
 </div>
