change image path

--- a/app/views/patterns/add-to-a-list.html
+++ b/app/views/patterns/add-to-a-list.html
@@ -31,7 +31,7 @@
         }) }}
 
       <p style="background-color:#ddebf1; padding: 10px;">
-        <a href="/../..{{ publicPath }}/images/add-to-list.gif"><img src="/../..{{ publicPath }}/images/add-to-list.gif" alt="add to a list pattern displayed" style="height:400px;"></a>
+        <a href="{{ asset_path }}images/add-to-list.gif"><img src="{{ asset_path }}images/add-to-list.gif" alt="add to a list pattern displayed" style="height:400px;"></a>
       </p>
     </div>
 </div>
