--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -40,7 +40,7 @@
       <li>number for the adult label: There is an 'adult 1' on the 'pregnancy page' and the same number appear on the 'not pregnant' page = confusing!</li>
     </ul>
     <p><a href="http://hmrc.github.io/assets-frontend/patterns/add-to-a-list/index.html" target="_blank" rel="noopener" ><strong>There is a pattern</strong></a> which would be really good but probably not possible for IT to implement at the moment.</p>
-    <p><a href="/../..{{ publicPath }}/images/add-to-list.gif"><img src="/../..{{ publicPath }}/images/add-to-list.gif" alt="add to a list pattern displayed" style="height:400px;"></a></p>
+    <p><a href="{{ asset_path }}images/add-to-list.gif"><img src="{{ asset_path }}images/add-to-list.gif" alt="add to a list pattern displayed" style="height:400px;"></a></p>
 </div>
 
 {% endblock %}
