--- a/app/views/forms/education/confirmation.html
+++ b/app/views/forms/education/confirmation.html
@@ -53,6 +53,12 @@
           <p><a href="/forms/education/confirmation1.html"><strong>see with an email</strong></a></p>
       </ul>
   </div>
+  <div class="design-notes-box">
+      <h3 class="govuk-heading-s">Design notes:</h3>
+      <ul class="govuk-list govuk-list--bullet">
+          <li>Might need a sentence in the blue panel for user who didn't provide an email address to tell them they will receive a letter?</li>
+      </ul>
+  </div>
   <div class="UR-notes-box">
       <h3 class="govuk-heading-s">User research:</h3>
       <ul class="govuk-list govuk-list--bullet">
