--- a/app/views/forms/education/confirmation1.html
+++ b/app/views/forms/education/confirmation1.html
@@ -33,7 +33,7 @@
     {% if data['defer'] === 'yes' %}
     {{ govukButton({
       text: "Find out the next steps when you defer",
-      href: "/forms/education/P1-start.html",
+      href: "/forms/education/info-defer.html",
       classes: "govuk-!-margin-top-2 govuk-!-margin-bottom-8"
     }) }}
     {% else %}
@@ -47,10 +47,12 @@
     </div>
   </div>
   <div class="alt-notes-box">
+      <h3 class="govuk-heading-s">Design notes:</h3>
       <ul class="govuk-list govuk-list--bullet">
           <p><a href="/forms/education/confirmation.html"><strong>see without an email</strong></a></p>
       </ul>
   </div>
+
 {% endblock %}
 
 
