--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -46,7 +46,7 @@
       </form>
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          <p>good to go</p>   
+          <p>maybe say will your child have a sibling at the school in August 2019?</p>   
       </div>
       <div class="UR-notes-box">
           <h3 class="govuk-heading-s">User Research notes:</h3>
