--- a/app/views/forms/education/summary.html
+++ b/app/views/forms/education/summary.html
@@ -119,7 +119,7 @@
             
         <div class="app-check-your-answers__contents sum-grey">
           <dt class="app-check-your-answers__question">
-              ERC nursery
+              Nursery
           </dt>
           <dd class="app-check-your-answers__answer">
               {{ data['nursery'] }}
